# naive_fs

./: .gitignore  02 inode-based File System_537207149.pptx  CMakeLists.txt  README.md
block/: create_block.sh
include/: absolute_pathname.h  block.h  common.h  file.h  filename.h  inode.h  pathname.h  symbolic_link.h
src/: absolute_pathname.c  block.c  file.c  filename.c  inode.c  pathname.c  symbolic_link.c
test/: test.c
